additional files to the telemedicine application

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This repository will contain the code for a telemedicine application wit various features. The aim of the wesite is to link patients and doctors and help bridge distance through the internet.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +19,8 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
